--- a/css/card-main-layout.css
+++ b/css/card-main-layout.css
@@ -162,10 +162,10 @@ h1 {
     position: fixed !important;
     height: 100 !important;
     width: 47.5vw !important;
-    bottom: 0 !important;
+    bottom: 40px !important;
     margin: 0 !important;
     left: 5px !important;
-    top: 0 !important;
+    top: 40px !important;
 }
 
 .notion-collection-card.gallery {
@@ -264,16 +264,5 @@ h1 {
     margin: 0 !important;
     padding: 0 !important;
     box-sizing: border-box !important;
-  }
-  
-    .notion-collection-card.gallery .notion-property__title {
-    opacity: 1 !important;
-    transform: translateY(0) !important;
-    transition: none !important;
-    position: relative !important;
-    padding: 10px 15px !important;
-    max-width: 100% !important;
-    font-size: 16px !important;
-    color: #fff !important;
   }
 }
