--- a/css/card-main-layout.css
+++ b/css/card-main-layout.css
@@ -265,4 +265,9 @@ h1 {
     padding: 0 !important;
     box-sizing: border-box !important;
   }
+
+  .notion-collection-card.gallery .notion-property__title {
+      opacity: 1 !important;
+      transform: translateY(0) !important;
+  }
 }
