--- a/css/cd-player.css
+++ b/css/cd-player.css
@@ -111,3 +111,16 @@ transform: rotate(360deg);
     height: 40px;
   }
 }
+
+@media (min-width: 768px) and (orientation: landscape) {
+  .cd-display {
+    width: 100px;
+    margin: 50px auto 0 auto;
+    z-index: 20;
+  }
+
+  .play-pause-btn {
+    width: 40px;
+    height: 40px;
+  }
+}
