--- a/css/cd-player.css
+++ b/css/cd-player.css
@@ -112,15 +112,20 @@ transform: rotate(360deg);
   }
 }
 
-@media (min-width: 768px) and (orientation: landscape) {
+@media (min-width: 320px) and (max-width: 768px) and (orientation: landscape) {
+  /* 가로 모드에서 크기 조정 */
   .cd-display {
-    width: 100px;
-    margin: 50px auto 0 auto;
-    z-index: 20;
+    width: 100px; /* 디스플레이 크기 축소 */
+    max-width: none;
+  }
+
+  .center-label {
+    width: 30px; /* 센터 레이블 크기 축소 */
+    height: 30px;
   }
 
   .play-pause-btn {
-    width: 40px;
-    height: 40px;
+    width: 30px; /* 버튼 크기 축소 */
+    height: 30px;
   }
 }
