--- a/css/card-main-layout.css
+++ b/css/card-main-layout.css
@@ -26,7 +26,7 @@
 
 @media (min-width: 768px) and (orientation: landscape) {
   /* 핸드폰을 가로로 돌렸을 때 웹과 동일한 레이아웃 설정 */
-  .notion-header {
+  .super-footer {
     display: none !important;
   }
 
@@ -60,6 +60,13 @@
   .notion-collection-card.gallery:hover .notion-property__title {
     opacity: 1;
     transform: translateY(0);
+  }
+  
+  .notion-image,
+  .notion-link {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
   }
 }
 
