--- a/css/cd-player.css
+++ b/css/cd-player.css
@@ -94,7 +94,7 @@ transform: rotate(360deg);
 }
 }
 
-@media (max-width: 768px), (max-height: 768px) {
+@media (max-width: 768px) {
   .cd-display {
     width: 100px;
     margin: 50px auto 0 auto;
