--- a/css/card-main-layout-dev.css
+++ b/css/card-main-layout-dev.css
@@ -11,7 +11,7 @@
   z-index: 10;
 }
 
-@media (max-width: 1024px) and (orientation: portrait) {
+@media (max-width: 1024px) and (orientation: portrait) and (min-aspect-ratio: 3/4) {
     .super-navbar__content, .super-footer {
         padding: 10px;
     }
@@ -35,7 +35,7 @@
   z-index: inherit;
 }
 
-@media (max-width: 1024px) and (orientation: portrait) {
+@media (max-width: 1024px) and (orientation: portrait) and (min-aspect-ratio: 3/4) {
   .notion-header__title {
     display: none;
   }
@@ -220,7 +220,7 @@ h1 {
   height: 100% !important;
 }
 
-@media (max-width: 1024px) and (orientation: portrait) {
+@media (max-width: 1024px) and (orientation: portrait) and (min-aspect-ratio: 3/4) {
   .notion-page__properties-layout {
     margin: 0 !important;
     padding: 0 !important;
