--- a/css/card-main-layout-dev.css
+++ b/css/card-main-layout-dev.css
@@ -35,6 +35,14 @@
 }
 
 @media (max-width: 1024px) and (orientation: portrait) and (min-aspect-ratio: 3/4) {
+    .super-footer,
+    .super-navbar,
+    .super-content {
+      margin-left: 0 !important;
+      width: 100% !important;
+      position: relative !important;
+    }
+  
     .super-navbar__content, .super-footer {
         padding: 10px;
     }
