--- a/css/card-main-layout-dev.css
+++ b/css/card-main-layout-dev.css
@@ -1,7 +1,5 @@
 .notion-root {
   max-width: 720px!important;
-  padding-left: 0px !important;
-  padding-right: 0px !important;
 }
 
 .super-root {
@@ -21,6 +19,11 @@
     margin-left: 50vw !important;
     width: 50vw !important;
     position: static !important;
+  }
+  
+  .notion-root {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
   }
 }
 
