--- a/css/card-main-layout-dev.css
+++ b/css/card-main-layout-dev.css
@@ -107,8 +107,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 25vh; /* 화면 높이의 1/4 설정 */
-    max-height: none; /* 기존의 높이 제한 제거 */
+    height: 10vh;
+    max-height: 400px !important;
     z-index: 0;
     object-fit: cover;
   }
