--- a/css/card-main-layout-dev.css
+++ b/css/card-main-layout-dev.css
@@ -92,14 +92,13 @@
     align-items: center !important;
   }
 
-
   .notion-header {
     position: static !important;
     height: auto !important;
     width: 100% !important;
     top: 0 !important;
     margin-bottom: 20px;
-    z-index: 10;
+    z-index: 20;
   }
 
   .notion-header__cover {
@@ -258,6 +257,9 @@ h1 {
   .notion-page__properties-layout {
     margin: 0 !important;
     padding: 0 !important;
+    justify-content: center !important;
+    align-items: center !important;
+    z-index: 10;
   }
 
   .notion-collection-gallery {
