--- a/css/card-main-layout-dev.css
+++ b/css/card-main-layout-dev.css
@@ -106,9 +106,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 10vh;
+    height: 5vh;
     max-height: 400px !important;
-    z-index: 0;
+    z-index: -1; /* 레이어 제일 하단 */
     object-fit: cover;
   }
   
