--- a/css/cd-player.css
+++ b/css/cd-player.css
@@ -94,20 +94,22 @@ transform: rotate(360deg);
 }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) and (orientation: portrait) {
   .cd-display {
-    width: 100px;
+    width: min(30vh, 80vw); /* 화면 높이의 30%와 너비의 80% 중 작은 값 사용 */
+    height: min(30vh, 80vw);
     margin: 50px auto 0 auto;
     z-index: 20;
   }
 
   .center-label {
-    width: 40px;
-    height: 40px;
+    width: min(12vh, 32vw); /* 제한된 크기로 조정 */
+    height: min(12vh, 32vw);
   }
 
   .play-pause-btn {
-    width: 40px;
-    height: 40px;
+    width: min(10vh, 28vw);
+    height: min(10vh, 28vw);
   }
+}
 }
