--- a/css/cd-player.css
+++ b/css/cd-player.css
@@ -98,6 +98,7 @@ transform: rotate(360deg);
     width: min(30vh, 80vw); /* CD의 동적 너비 */
     height: min(30vh, 80vw); /* CD의 높이 동기화 */
     aspect-ratio: 1 / 1; /* 추가적인 정원 보장 */
+    border-radius: 50%; /* 정원을 강제 유지 */
     margin: 50px auto 0 auto;
     z-index: 20;
   }
