--- a/css/cd-player.css
+++ b/css/cd-player.css
@@ -1,6 +1,7 @@
 .cd-display {
 position: relative;
-width: 50%; /* 가로 폭을 부모 요소에 맞춤 */
+width: min(20vh, 60vw);
+height: min(20vh, 60vw); /* 높이 동기화 */
 max-width: 250px; /* 최대 크기 설정 */
 aspect-ratio: 1 / 1;
 display: flex;
@@ -110,8 +111,8 @@ transform: rotate(360deg);
   }
 
   .play-pause-btn {
-    width: min(10vh, 28vw); /* 동적 너비 */
-    height: min(10vh, 28vw); /* 높이를 동일하게 설정 */
+    width: min(9vh, 24vw); /* 동적 너비 */
+    height: min(9vh, 24vw); /* 높이를 동일하게 설정 */
     display: flex;
     align-items: center;
     justify-content: center;
