--- a/css/card-main-layout.css
+++ b/css/card-main-layout.css
@@ -183,7 +183,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.1);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)); /* 위에서 아래로 점점 진해지는 검정색 */
   z-index: 1;
   pointer-events: none;
 }
@@ -204,7 +204,7 @@ h1 {
 
 .notion-collection-gallery {
     grid-template-columns: repeat(3, 1fr) !important;
-    grid-gap:10px !important;
+    grid-gap:20px !important;
     margin: 40px 0 !important;
     border: none !important;
     padding: 0 !important;
@@ -225,7 +225,7 @@ h1 {
 }
 
 .notion-collection-card.gallery:before {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 70%) !important;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.3) 70%) !important; /* 검은색을 더 짙게 변경 */
     pointer-events: none !important;
     position: absolute !important;
     content: "" !important;
