--- a/css/card-main-layout.css
+++ b/css/card-main-layout.css
@@ -103,6 +103,37 @@
   z-index: inherit;
 }
 
+.notion-column-list {
+  display: flex !important;
+  gap: 0 !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+.notion-column {
+  flex: 0.07 0 auto !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: auto !important;
+}
+
+.notion-callout__icon img {
+  width: 40px !important;
+  height: 70px !important;
+  object-fit: contain !important;
+  cursor: pointer;
+}
+
+.notion-callout {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+.notion-callout__content {
+  display: none !important;
+}
+
 @media (max-width: 1024px) and (orientation: portrait) {
   .notion-header__title {
     display: none;
@@ -173,6 +204,15 @@
     text-align: center;
     width: 100% !important;
     height: auto !important;
+  }
+
+  .notion-column-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: 0 auto;
+    max-width: 800px;
   }
 }
 
